<resources>
    <string name="app_name">UBIC Wallet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">UBIC</string>
    <string name="nav_header_subtitle">Beta wallet</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="private_key_shared_pref">private_key_shared_pref</string>
    <string name="private_key_shared_pref_new">wallet_shared_pref_new</string>
    <string name="iv_key_shared_pref">iv_key_shared_pref</string>
    <string name="iv_key_shared_pref_new">iv_key_shared_pref_new</string>
    <string name="no_funds_info">You cannot make a payment, your wallet is empty</string>

    <string name="empty_balance_message">Your wallet is empty, register your passport to receive a UBI</string>
    <string name="empty_balance_passport_pending">You are member of the UBI program and you will receive UBIC coins soon, be patient</string>

    <string name="error_error">Error</string>
    <string name="error_nfc_is_disabled">You need to enable nfc to use this functionality</string>
    <string name="go_to_nfc_settings">Go into your settings to activate NFC</string>
    <string name="error_cannot_get_fees">Couldn\'t recover current transaction fees, verify your internet connection</string>
    <string name="error_no_selected_currency">No currency was selected</string>
    <string name="error_empty_address">Address can not be empty</string>
    <string name="error_invalid_amount">Invalid amount</string>
    <string name="error_unknown_error">Unknown error</string>
    <string name="error_invalid_server_response">Invalid server response</string>
    <string name="error_passport_unknown_error">Unknown error</string>
    <string name="error_passport_invalid_server_response">Invalid server response</string>

    <string name="success">Success</string>
    <string name="transaction_was_send">Transaction was send</string>

    <string name="title_activity_result_display">Data</string>
    <string name="title_activity_waiting_for_nfc">Waiting for NFC tag</string>
    <string name="title_activity_reading_passport">Reading</string>

    <string name="passport_info_alert_text">The NFC chip of the passport is password protected, you need to provide following information</string>

    <string name="passport_number_text">Passport No.</string>
    <string name="date_of_birth_text">Date of birth</string>
    <string name="date_of_expiry_text">Date of expiry</string>

    <string name="uploading_kyc_transaction">Uploading KYC transaction</string>
    <string name="uploading_passport_transaction">Uploading Passport transaction</string>
    <string name="uploading_passport_transaction_done">Done! in some minutes you should start receive your UBI</string>

    <string name="next_button_text">Next</string>

    <string name="waiting_for_nfc_text">Please place your device on the inner cover of the passport</string>
    <string name="found_nfc_text">Found NFC Tag!</string>

    <string name="congratulation_ubi">Congratulation! you are receiving a UBI</string>

    <string name="reading_passport_progress">Reading passport content</string>

    <string name="information_tab_text">Information</string>
    <string name="image_tab_text">Image</string>
    <string name="security_tab_text">Security</string>

    <string name="information_document_type">Document type</string>
    <string name="information_issued_by">Issued by</string>
    <string name="information_document_number">Document No.</string>
    <string name="information_date_of_expiry">Date of expiry</string>
    <string name="information_gender">Gender</string>
    <string name="information_gender_male">Male</string>
    <string name="information_gender_female">Female</string>
    <string name="information_nationality">Nationality</string>
    <string name="information_surname">Surname</string>
    <string name="information_given_names">Given names</string>
    <string name="information_date_of_birth">Date of birth</string>

    <string name="information_issuer_country">Issuer country</string>
    <string name="information_certification_authority">Certification authority</string>
    <string name="information_issuer_organization">Issuer organization</string>
    <string name="information_issuer_organizational_unit">Organizational unit</string>
    <string name="information_signature_algorithm">Signature algorithm</string>
    <string name="information_lds_hash_algorithm">LDS hash algorithm</string>
    <string name="information_valid_from">Certificate valid from</string>
    <string name="information_valid_until">certificate valid until</string>

    <string name="error_dg1_is_null">Application error \'DG1\', please try again. If the problem persists report it us at panda@panda.cat</string>
    <string name="error_dg2_is_null">Application error \'DG2\', please try again. If the problem persists report it us at panda@panda.cat</string>
    <string name="error_mutual_authentication_failed">Authentication failed, please check the passport No. / date of birth / date of expiry. If the problem persists write us at panda@panda.cat</string>
    <string name="error_lost_connexion">Lost connexion, please try again</string>
    <string name="error_nfc_exception">An error occurred, please try again. If the problem persists write us at panda@panda.cat</string>


    <string name="passport_info_shared_pref">passport_info_shared_pref</string>
    <string name="passport_number_shared_pref">passport_number_shared_pref</string>
    <string name="passport_date_of_birth_shared_pref">passport_date_of_birth_shared_pref</string>
    <string name="passport_date_of_expiry_shared_pref">passport_date_of_expiry_shared_pref</string>
    <string name="passport_challenge_shared_pref">passport_challenge_shared_pref</string>
    <string name="error_qr_code">Error</string>
    <string name="error_unsupported">Unsupported QrCode</string>
    <string name="add_new_private_key">Add a new private key</string>
    <string name="warning_this_is_your_private_key_don_t_share_it">Important: Please make a backup of your private key and don\'t share it with others</string>
    <string name="it_appears_that_you_are_not_receiving_a_ubi">It appears that you are not receiving a UBI. Register a passport to get one. If you just registered your passport please wait some minutes</string>
    <string name="register_a_passport">Register a passport</string>
    <string name="register_another_passport">Register another passport</string>
    <string name="no_internet_connectivity">No internet connectivity :-(</string>
    <string name="set_as_default_button">Set as default</string>
    <string name="copy_to_clipboard_button">copy to clipboard</string>
    <string name="ubic_address_placeholder">UBIC ADDRESS</string>
    <string name="generate_new_private_key_button">Generate new private key</string>
    <string name="private_key_placeholder">Private key...</string>
    <string name="import_button">Import</string>
    <string name="ok">Ok</string>

    <string name="cannot_import_invalid_privatekey">Cannot import the private key, it is invalid</string>
    <string name="not_enough_space_for_import">For security reasons, at least 50MB of free disk space are required to import a new private key</string>
    <string name="error">Error</string>

    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="message">message</string>
    <string name="private_key">Private key:</string>
    <string name="other_private_keys">Other private keys</string>
</resources>
