<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".Fragments.PrivateKeyFragment">

    <LinearLayout
        android:id="@+id/private_key_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputEditText
            android:layout_marginTop="40dp"
            android:theme="@style/EditTextStyle"
            android:id="@+id/private_key_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/private_key_placeholder" />
        <Button
            android:theme="@style/ButtonStyle"
            android:id="@+id/generateNewPrivateKeyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate_new_private_key_button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom" >
            <Button
                android:theme="@style/ButtonStyle"
                android:id="@+id/importPrivateKeyButton"
                android:layout_width="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="wrap_content"
                android:text="@string/import_button" />
        </LinearLayout>
    </LinearLayout>


</FrameLayout>