<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/address_preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="qxxxxxx"
                android:textColor="@color/ubicWhite"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/private_key_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:text="@string/private_key"
                android:textColor="@color/ubicWhite"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/private_key_preview_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:text="afafff ffafff"
                android:textColor="@color/ubicWhite"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">
                <Button
                    android:theme="@style/ButtonStyle"
                    android:id="@+id/setAsDefault"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content"
                    android:textSize="6pt"
                    android:text="@string/set_as_default_button" />

                <Button
                    android:theme="@style/ButtonStyle"
                    android:id="@+id/exportToK"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content"
                    android:textSize="6pt"
                    android:text="@string/copy_to_clipboard_button" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
        </LinearLayout>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>