<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/RegisterPassportMainLayout"
    tools:context=".Fragments.RegisterPassportFragment">

    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/ReadNfcBtn"
        android:id="@+id/linearLayout2">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:background="@color/ubicDarkBlue"
            android:weightSum="1"
            android:padding="6dp">

            <ImageView
                android:layout_width="67dp"
                android:layout_height="match_parent"
                android:id="@+id/imageView"
                android:src="@drawable/ic_info_outline_white_48px" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/passport_info_alert_text"
                android:id="@+id/textView5"
                android:textSize="14sp"
                android:textColor="@color/ubicWhite"
                android:paddingLeft="8dp"
                android:paddingTop="4dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:weightSum="1"
            android:layout_below="@+id/PassportNbr"
            android:layout_above="@+id/ReadNfcBtn"
            android:id="@+id/linearLayout"
            android:paddingTop="8dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.50"
                android:weightSum="1"
                android:paddingLeft="2dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        android:textStyle="bold"
                        android:textAllCaps="false"
                        android:textColor="@color/ubicWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/passport_number_text"
                        android:id="@+id/textView6"
                        android:gravity="center_vertical"
                        android:layout_alignBottom="@+id/DateOfBirth"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/PassportNbr" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:textStyle="bold"
                        android:textAllCaps="false"
                        android:textColor="@color/ubicWhite"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/date_of_birth_text"
                        android:id="@+id/textView4"
                        android:gravity="center_vertical"
                        android:layout_alignBottom="@+id/DateOfBirth"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/PassportNbr" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:textStyle="bold"
                        android:textAllCaps="false"
                        android:textColor="@color/ubicWhite"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/date_of_expiry_text"
                        android:id="@+id/textView3"
                        android:layout_alignBottom="@+id/DateOfExpiration"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignTop="@+id/DateOfExpiration"
                        android:gravity="center_vertical" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="152dp"
                android:layout_height="match_parent"
                android:layout_weight="0.61"
                android:weightSum="1">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal">

                    <EditText
                        android:theme="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textCapCharacters"
                        android:id="@+id/PassportNbr"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:hint="XXXXXXXXXX" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal">

                    <EditText
                        android:theme="@style/EditTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:ems="10"
                        android:id="@+id/DateOfBirth"
                        android:layout_below="@+id/PassportNbr"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:hint="00/00/0000" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal">

                    <EditText
                        android:theme="@style/EditTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:ems="10"
                        android:id="@+id/DateOfExpiration"
                        android:layout_below="@+id/DateOfBirth"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:hint="00/00/0000" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/ReadNfcBtn"
            android:text="@string/next_button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="16dp"
            android:theme="@style/ButtonStyle"/>

    </LinearLayout>

</FrameLayout>
